--- a/static/index.html
+++ b/static/index.html
@@ -365,10 +365,22 @@
       try {
         // Load all four CSV files simultaneously
         const [part1, part2, part3, part4] = await Promise.all([
-          fetch('/static/nba_shot_locs_part1.csv').then(r => r.text()),
-          fetch('/static/nba_shot_locs_part2.csv').then(r => r.text()),
-          fetch('/static/nba_shot_locs_part3.csv').then(r => r.text()),
-          fetch('/static/nba_shot_locs_part4.csv').then(r => r.text()),
+          fetch('/static/nba_shot_locs_part1.csv').then(r => {
+            if (!r.ok) throw new Error(`Failed to load part1 (HTTP ${r.status})`);
+            return r.text();
+          }),
+          fetch('/static/nba_shot_locs_part2.csv').then(r => {
+            if (!r.ok) throw new Error(`Failed to load part2 (HTTP ${r.status})`);
+            return r.text();
+          }),
+          fetch('/static/nba_shot_locs_part3.csv').then(r => {
+            if (!r.ok) throw new Error(`Failed to load part3 (HTTP ${r.status})`);
+            return r.text();
+          }),
+          fetch('/static/nba_shot_locs_part4.csv').then(r => {
+            if (!r.ok) throw new Error(`Failed to load part4 (HTTP ${r.status})`);
+            return r.text();
+          }),
         ]);
 
         // Parse all CSV files using your existing row processor
@@ -377,24 +389,36 @@
         const data3 = d3.csvParse(part3, processRow);
         const data4 = d3.csvParse(part4, processRow);
 
+        // Validate parsed data
+        if (!data1.length || !data2.length || !data3.length || !data4.length) {
+          throw new Error('One or more data files are empty or improperly formatted');
+        }
+
         // Combine and filter as before (now includes all four parts)
         allData = [...data1, ...data2, ...data3, ...data4].filter(d =>
           d.shot_zone_basic !== 'BCS' && d.shot_zone_range !== 'BCS'
         );
 
-        // The rest of your existing code remains exactly the same
+        // Populate team filter dropdown
         allData.forEach(d => allTeams.add(d.team));
         const sortedTeams = Array.from(allTeams).sort();
 
         const teamSelect = d3.select('.team-filter');
+        teamSelect.selectAll('option').remove(); // Clear existing options
+        teamSelect.append('option')
+          .attr('value', 'all')
+          .text('All Teams');
+
         sortedTeams.forEach(team => {
           teamSelect.append('option')
             .attr('value', team)
             .text(team);
         });
 
+        // Initialize visualizations
         initVisualizations();
 
+        // Set up event listeners
         d3.select('.min-shots-filter')
           .on('change', function () {
             minShotsFilter = +this.value;
@@ -424,7 +448,52 @@
           });
 
       } catch (error) {
-        console.error('Error loading data:', error);
+        console.groupCollapsed('Data Loading Error');
+        console.error('Error details:', error);
+
+        // User-friendly error display
+        const errorContainer = d3.select('.container')
+          .insert('div', ':first-child')
+          .attr('class', 'error-message')
+          .style('background', '#ff4444')
+          .style('color', 'white')
+          .style('padding', '15px')
+          .style('border-radius', '4px')
+          .style('margin-bottom', '20px');
+
+        errorContainer.append('h3')
+          .style('margin-top', '0')
+          .text('Data Loading Failed');
+
+        errorContainer.append('p')
+          .text('We couldn\'t load the NBA shot location data. This might be because:');
+
+        const list = errorContainer.append('ul')
+          .style('margin-bottom', '10px');
+
+        list.append('li')
+          .text('Your internet connection was interrupted');
+        list.append('li')
+          .text('The data files are temporarily unavailable');
+        list.append('li')
+          .text('There was a technical issue on our end');
+
+        errorContainer.append('button')
+          .style('padding', '5px 10px')
+          .style('cursor', 'pointer')
+          .text('Try Again')
+          .on('click', () => window.location.reload());
+
+        // Specific error logging
+        if (error.name === 'AbortError') {
+          console.error('Request was aborted - likely due to network issues');
+        } else if (error.message.includes('Content-Length')) {
+          console.error('Content-Length mismatch - possible corrupted file transfer');
+        } else if (error.message.includes('HTTP')) {
+          console.error('Server returned an error response');
+        }
+
+        console.groupEnd();
       }
     }
 
